fixed overflow, added content in right section

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ main{
 footer{
     height: 90px;
     background-color: orchid;
+    position: relative;
+    z-index: 10;
 }
 
 span, p{
@@ -24,6 +26,10 @@ p{
     padding: 0.4rem 0rem;
 }
 
+h2, h3{
+    color: white;
+}
+
 .flex{
     display: flex;
 }
@@ -31,11 +37,15 @@ p{
 .col-left{
     width: 220px;
     background-color: rgb(0, 0, 0);
+    height: 100%;
+    overflow: hidden;
 }
 
 .col-right{
     width: calc(100% - 220px);
-    background-color: chartreuse;
+    background-color: BLACK;
+    height: 100%;
+    overflow: hidden;
 }
 
 #top-ad{
@@ -67,6 +77,9 @@ p{
 .nav-bottom{
     height: 85px;
     align-items: center;
+    position: relative;
+    z-index: 10;
+    background-color: black;
 }
 
 .nav-logo{
@@ -101,11 +114,50 @@ p{
 
 .playlist-list{
     overflow: auto;
-    height: 300px;
+    height: 200px;
+}
+
+.account{
+    position: relative;
+    z-index: 10;
+    background-color: black;
 }
 
 .account> div > img{
     width: 10%;
+}
+
+.music-options{
+    width: 50%;
+    margin: 0 auto;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 30px;
+}
+
+.option > a{
+    text-decoration: none;
+    color: white;
+}
+
+.container-music{
+    padding: 0 3rem;
+    overflow: auto;
+    height: calc(100% - 110px);
+}
+
+.music{
+    flex-wrap: wrap;
+}
+
+.card{
+    flex-direction: column;
+    width: calc((100% / 6) - 2rem);
+    margin-right: 2rem;
+}
+
+.card > img{
+    object-fit: contain;
 }
 
 #active-left{
@@ -121,4 +173,8 @@ p{
 #hr-user{
     width: 90%;
     margin: .6rem auto;
+}
+
+#title{
+    padding: 2rem 0;
 }
